# token-counter

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
assets/tokenizers/xenova-gpt-4o/: README.md
benches/: rayon_file_processing.rs
benchmarks/: README.md
benchmarks/results/: 2026-07-21-apple-m5-pro.md
src/: lib.rs  main.rs
