[package]
name = "token-counter"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Jacob Keisling <contact@keisling.me>"]
description = "`wc` for tokens: count tokens in files with HF Tokenizers"
license = "MIT"
repository = "https://github.com/EndlessReform/token-counter"
keywords = ["cli", "tokenizer", "nlp"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[[bin]]
name = "tc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.4", features = ["derive"] }
glob = "0.3.4"
rayon = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.23.1", features = ["http"] }

[[bench]]
name = "rayon_file_processing"
harness = false
